--- a/index.html
+++ b/index.html
@@ -1,59 +1,66 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LukeTA2 – Tatuaggi Geometrici & Watercolor</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LukeTA2 - Tatuaggi Geometrici e Watercolor</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Montserrat', sans-serif;
       background-color: #000;
       color: #fff;
+      line-height: 1.6;
     }
     header {
-      text-align: center;
-      padding: 100px 20px 60px;
       background-color: #111;
+      padding: 60px 20px;
+      text-align: center;
     }
     header h1 {
-      font-size: 2.5em;
-      margin: 0;
       color: #d4af37;
+      font-size: 2.5rem;
     }
     header p {
       color: #ccc;
-      font-size: 1em;
-      margin-top: 10px;
+      font-size: 1rem;
     }
     section {
       padding: 60px 20px;
-      max-width: 800px;
-      margin: 0 auto;
-    }
-    h2 {
-      color: #d4af37;
       text-align: center;
+    }
+    section h2 {
+      color: #d4af37;
       margin-bottom: 20px;
     }
-    .gallery img {
-      width: 100%;
-      max-width: 300px;
-      margin: 10px;
-      border: 2px solid #d4af37;
-      border-radius: 8px;
+    .about p {
+      max-width: 800px;
+      margin: 0 auto;
+      font-size: 1.1rem;
     }
     .gallery {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
+      gap: 20px;
+      margin-top: 40px;
+    }
+    .gallery img {
+      width: 300px;
+      height: auto;
+      border: 3px solid #d4af37;
+      border-radius: 10px;
+    }
+    .contact p {
+      font-size: 1.1rem;
+      margin-bottom: 10px;
     }
     footer {
-      text-align: center;
-      padding: 40px 20px;
       background-color: #111;
-      font-size: 0.9em;
-      color: #666;
+      color: #888;
+      text-align: center;
+      padding: 20px;
     }
     a {
       color: #d4af37;
@@ -67,31 +74,32 @@
     <p>Stile, precisione e colore. A Modena dal 2013.</p>
   </header>
 
-  <section>
+  <section class="about">
     <h2>Chi sono</h2>
     <p>Ciao, sono Luca Cirillo, in arte <strong>LukeTA2</strong>. Realizzo tatuaggi ispirati alla geometria sacra, mandala e tecniche watercolor. Ogni disegno è unico, pensato per armonizzarsi con il corpo e la personalità di chi lo indossa.</p>
   </section>
 
-  <section>
+  <section class="gallery">
     <h2>Galleria</h2>
     <div class="gallery">
-      <img src="https://via.placeholder.com/300x300?text=Mandala" alt="Mandala" />
-      <img src="https://via.placeholder.com/300x300?text=Geometrico" alt="Geometrico" />
-      <img src="https://via.placeholder.com/300x300?text=Watercolor" alt="Watercolor" />
+      <img src="https://via.placeholder.com/300x400.png?text=Mandala+1" alt="Tatuaggio Mandala 1">
+      <img src="https://via.placeholder.com/300x400.png?text=Geometrico+1" alt="Tatuaggio Geometrico 1">
+      <img src="https://via.placeholder.com/300x400.png?text=Watercolor+1" alt="Tatuaggio Watercolor 1">
+      <img src="https://via.placeholder.com/300x400.png?text=Mandala+2" alt="Tatuaggio Mandala 2">
+      <img src="https://via.placeholder.com/300x400.png?text=Geometrico+2" alt="Tatuaggio Geometrico 2">
+      <img src="https://via.placeholder.com/300x400.png?text=Watercolor+2" alt="Tatuaggio Watercolor 2">
     </div>
   </section>
 
-  <section>
-    <h2>Contatti</h2>
-    <p style="text-align: center;">
-      📍 Modena, Italia<br>
-      ✉️ <a href="mailto:luketa2.tattoo@gmail.com">luketa2.tattoo@gmail.com</a><br>
-      📸 <a href="https://instagram.com/luketa2" target="_blank">@luketa2</a>
-    </p>
+  <section class="contact">
+    <h2>Contattami</h2>
+    <p>📍 Modena, Italia</p>
+    <p>📧 <a href="mailto:luketa2@email.com">luketa2@email.com</a></p>
+    <p>📸 <a href="https://instagram.com/luketa2" target="_blank">Instagram: @luketa2</a></p>
   </section>
 
   <footer>
-    &copy; 2025 LukeTA2 • Tutti i diritti riservati
+    <p>&copy; 2025 LukeTA2 • Tutti i diritti riservati</p>
   </footer>
 </body>
 </html>
