--- a/index.html
+++ b/index.html
@@ -1,164 +1,117 @@
 <!DOCTYPE html>
 <html lang="it">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LukeTA2 – Tatuaggi Geometrici & Watercolor</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background-color: #000;
-      color: white;
-    }
-
-    header {
+      font-family: 'Open Sans', sans-serif;
       background-color: #111;
-      padding: 30px 20px 15px;
+      color: #fff;
+    }
+    header {
+      background-image: url('img/hero.jpg');
+      background-size: cover;
+      background-position: center;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       text-align: center;
+      position: relative;
     }
-
+    header::after {
+      content: '';
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0,0,0,0.5);
+    }
     header h1 {
-      color: #d4af37;
-      font-size: 28px;
-      margin: 0;
+      font-family: 'Playfair Display', serif;
+      color: #f3c948;
+      font-size: 3rem;
+      z-index: 1;
     }
-
     header p {
-      font-size: 14px;
-      color: #ccc;
-      margin: 5px 0 0;
+      z-index: 1;
+      font-size: 1.2rem;
     }
-
     nav {
+      position: absolute;
+      top: 0;
+      width: 100%;
       display: flex;
       justify-content: space-between;
-      align-items: center;
-      background-color: #000;
-      padding: 15px 30px;
+      padding: 1rem 2rem;
+      z-index: 2;
     }
-
-    nav .logo {
-      color: #d4af37;
-      font-weight: bold;
-      font-size: 20px;
-    }
-
-    nav ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      gap: 20px;
-    }
-
-    nav ul li a {
-      color: white;
+    nav a {
+      color: #fff;
       text-decoration: none;
-      transition: color 0.3s;
+      margin-left: 1rem;
+      font-weight: bold;
     }
-
-    nav ul li a:hover {
-      color: #d4af37;
-    }
-
     section {
-      padding: 50px 20px;
+      padding: 4rem 2rem;
       text-align: center;
     }
-
-    h2 {
-      color: #d4af37;
-      margin-bottom: 30px;
+    section h2 {
+      color: #f3c948;
+      font-size: 2rem;
+      margin-bottom: 1rem;
     }
-
     .gallery {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 20px;
+      gap: 2rem;
     }
-
-    .gallery img {
-      border: 2px solid #d4af37;
-      border-radius: 10px;
-      width: 250px;
-      height: auto;
-      object-fit: cover;
-      transition: transform 0.3s;
+    .gallery-item {
+      width: 300px;
+      border: 2px solid #f3c948;
+      border-radius: 8px;
+      overflow: hidden;
     }
-
-    .gallery img:hover {
-      transform: scale(1.05);
+    .gallery-item img {
+      width: 100%;
+      display: block;
     }
-
-    form {
-      max-width: 400px;
-      margin: 0 auto;
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-
-    input, textarea {
-      padding: 10px;
-      border-radius: 5px;
-      border: none;
-    }
-
-    button {
-      background-color: #d4af37;
-      color: #000;
-      border: none;
-      padding: 10px;
-      border-radius: 5px;
+    .gallery-item p {
+      background: #222;
+      margin: 0;
+      padding: 1rem;
+      color: #f3c948;
       font-weight: bold;
-      cursor: pointer;
     }
-
     footer {
-      background-color: #111;
-      color: #ccc;
+      padding: 2rem;
+      background: #000;
+      color: #fff;
       text-align: center;
-      padding: 20px;
-      font-size: 14px;
-    }
-
-    footer a {
-      color: #d4af37;
-      text-decoration: none;
-      margin-left: 10px;
-    }
-
-    @media (max-width: 768px) {
-      .gallery {
-        flex-direction: column;
-        align-items: center;
-      }
+      font-size: 0.9rem;
     }
   </style>
 </head>
-
 <body>
-  <nav>
-    <div class="logo">LukeTA2</div>
-    <ul>
-      <li><a href="#chisono">Chi sono</a></li>
-      <li><a href="#galleria">Galleria</a></li>
-      <li><a href="#contatti">Contatti</a></li>
-    </ul>
-  </nav>
-
   <header>
+    <nav>
+      <div style="color: #f3c948; font-weight: bold; font-size: 1.2rem;">LukeTA2</div>
+      <div>
+        <a href="#chi">Chi sono</a>
+        <a href="#galleria">Galleria</a>
+        <a href="#contatti">Contatti</a>
+      </div>
+    </nav>
     <h1>LukeTA2 – Tatuaggi Geometrici & Watercolor</h1>
     <p>Stile, precisione e colore. A Modena dal 2013.</p>
   </header>
 
-  <section id="chisono">
+  <section id="chi">
     <h2>Chi sono</h2>
     <p>Ciao, sono Luca Cirillo, in arte <strong>LukeTA2</strong>. Realizzo tatuaggi ispirati alla geometria sacra, mandala, tecniche watercolor e bianco e nero. Ogni disegno è unico, pensato per armonizzarsi con il corpo e la personalità di chi lo indossa.</p>
   </section>
@@ -166,25 +119,21 @@
   <section id="galleria">
     <h2>Galleria</h2>
     <div class="gallery">
-      <img src="img/mandala.jpg" alt="Mandala">
-      <img src="img/biancoenero.jpg" alt="Bianco e Nero">
-      <img src="img/watercolor.jpg" alt="Watercolor">
+      <div class="gallery-item">
+        <img src="img/mandala.jpg" alt="Mandala">
+        <p>Mandala</p>
+      </div>
+      <div class="gallery-item">
+        <img src="img/biancoenero.jpg" alt="Bianco e Nero">
+        <p>Bianco e Nero</p>
+      </div>
+      <div class="gallery-item">
+        <img src="img/watercolor.jpg" alt="Watercolor">
+        <p>Watercolor</p>
+      </div>
     </div>
   </section>
 
   <section id="contatti">
     <h2>Contattami</h2>
-    <form>
-      <input type="text" placeholder="Nome">
-      <input type="email" placeholder="Email">
-      <textarea rows="4" placeholder="Messaggio"></textarea>
-      <button type="submit">Invia</button>
-    </form>
-  </section>
-
-  <footer>
-    &copy; 2025 LukeTA2 • <a href="https://instagram.com/luketa2" target="_blank">Instagram</a>
-  </footer>
-</body>
-
-</html>
+    <p>
